Closed Bug 132126 Opened 23 years ago Closed 23 years ago

nsFactoryEntry::ReInit leaks memory

Categories

(Core :: XPCOM, defect, P3)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.0

People

(Reporter: Biesinger, Assigned: Biesinger)

References

()

Details

(Keywords: memory-leak)

Attachments

(1 file)

According to the URL above, there's a memory leak in nsFactoryEntry::ReInit: 430 location = nsCRT::strdup(aLocation); But it is not checked if location already contains data. Will attach a patch in a second.
Status: NEW → ASSIGNED
Keywords: mlk, patch, review
Priority: -- → P3
Target Milestone: --- → mozilla1.0
dougt, could you review?
Comment on attachment 75032 [details] [diff] [review] patch r=dougt
Attachment #75032 - Flags: review+
Comment on attachment 75032 [details] [diff] [review] patch sr=hewitt
Attachment #75032 - Flags: superreview+
Comment on attachment 75032 [details] [diff] [review] patch a=scc
Attachment #75032 - Flags: approval+
checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
*** Bug 111296 has been marked as a duplicate of this bug. ***
Component: XPCOM Registry → XPCOM
QA Contact: doug.turner → xpcom
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: