bug 132126 r=dougt sr=hewitt a=scc nsFactoryEntry::ReInit leaks memory