xpcom/components/nsComponentManager.cpp
@@ -356,6 +356,8 @@ nsFactoryEntry::ReInit(const nsCID &aClass, const char *aLocation, int aType)
     // SERVICE_ONLY entries can be promoted to an entry of another type
     NS_ENSURE_TRUE((typeIndex == NS_COMPONENT_TYPE_SERVICE_ONLY || cid.Equals(aClass)),
                    NS_ERROR_INVALID_ARG);
+    if (location)
+      nsCRT::free(location);
     location = nsCRT::strdup(aLocation);
     typeIndex = aType;
     return NS_OK;
